// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AcceptedStepItem renders accepted correctly 1`] = `
<View
  accessible={true}
  clickable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#ffffff",
      "borderRadius": 8,
      "elevation": 4,
      "flex": 1,
      "flexDirection": "row",
      "marginHorizontal": 16,
      "marginVertical": 4,
      "opacity": 1,
      "padding": 16,
      "shadowColor": "#000000",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 2,
    }
  }
  testID="AcceptedCardButton"
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View>
      <View
        accessible={true}
        clickable={true}
        isTVSelectable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "flex-start",
              "padding": 4,
            }
          }
        >
          <Text
            allowFontScaling={false}
            style={
              Array [
                Object {
                  "color": undefined,
                  "fontSize": 12,
                },
                Array [
                  Object {
                    "color": "#ffffff",
                  },
                  Object {
                    "fontSize": 18,
                  },
                  Object {
                    "color": "#52C5DC",
                    "fontSize": 18,
                    "paddingRight": 8,
                  },
                ],
                Object {
                  "fontFamily": "icomoon",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                Object {},
              ]
            }
          >
            
          </Text>
          <Text
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Array [
                  Object {
                    "color": "#52C5DC",
                    "fontSize": 14,
                    "lineHeight": 18,
                  },
                  undefined,
                ],
              ]
            }
          >
            Set a Reminder
          </Text>
        </View>
      </View>
      <Modal
        animationType="none"
        hardwareAccelerated={false}
        onRequestClose={[Function]}
        style={
          Object {
            "alignItems": "flex-end",
            "flex": 1,
            "flexDirection": "row",
          }
        }
        transparent={true}
        visible={false}
      >
        <View
          accessible={true}
          clickable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "rgba(0, 0, 0, 0.5)",
              "flex": 1,
              "opacity": 1,
            }
          }
        />
        <View
          pointerEvents="auto"
          style={
            Object {
              "backgroundColor": "#ffffff",
              "height": 0,
              "overflow": "hidden",
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "borderTopColor": "#ccc",
                  "borderTopWidth": 1,
                  "marginTop": 60,
                },
                undefined,
              ]
            }
          >
            <RCTDatePicker
              date={1566648000000}
              locale="en-TEST"
              minimumDate={1566648000000}
              mode="datetime"
              onChange={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "height": 216,
                }
              }
              timeZoneOffsetInMinutes={null}
            />
          </View>
          <View
            style={
              Object {
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <View
              accessible={true}
              clickable={true}
              isTVSelectable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "opacity": 1,
                }
              }
              testID="ReminderRepeatButtonDaily"
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "transparent",
                      "borderRadius": 0,
                      "borderWidth": 0,
                      "height": 60,
                      "justifyContent": "center",
                      "margin": 0,
                      "paddingHorizontal": 20,
                      "paddingVertical": 10,
                    },
                    null,
                    Array [
                      Object {
                        "borderRadius": 35,
                        "height": 70,
                        "margin": 8,
                        "paddingHorizontal": 0,
                        "paddingVertical": 0,
                        "width": 70,
                      },
                      Object {
                        "backgroundColor": "#ffffff",
                        "borderColor": "#B4B6BA",
                        "borderWidth": 1,
                      },
                    ],
                    null,
                  ]
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#505256",
                      },
                      Object {
                        "fontFamily": "SourceSansPro-Regular",
                      },
                      Array [
                        Object {
                          "backgroundColor": "rgba(0,0,0,0)",
                          "color": "#ffffff",
                          "fontSize": 18,
                          "fontWeight": "500",
                          "letterSpacing": 1.5,
                          "textAlign": "center",
                        },
                        Array [
                          Object {
                            "fontSize": 12,
                            "fontWeight": "normal",
                            "letterSpacing": 1,
                            "lineHeight": 16,
                          },
                          Object {
                            "color": "#B4B6BA",
                          },
                        ],
                      ],
                    ]
                  }
                >
                  Daily
                </Text>
              </View>
            </View>
            <View
              accessible={true}
              clickable={true}
              isTVSelectable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "opacity": 1,
                }
              }
              testID="ReminderRepeatButtonWeekly"
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "transparent",
                      "borderRadius": 0,
                      "borderWidth": 0,
                      "height": 60,
                      "justifyContent": "center",
                      "margin": 0,
                      "paddingHorizontal": 20,
                      "paddingVertical": 10,
                    },
                    null,
                    Array [
                      Object {
                        "borderRadius": 35,
                        "height": 70,
                        "margin": 8,
                        "paddingHorizontal": 0,
                        "paddingVertical": 0,
                        "width": 70,
                      },
                      Object {
                        "backgroundColor": "#ffffff",
                        "borderColor": "#B4B6BA",
                        "borderWidth": 1,
                      },
                    ],
                    null,
                  ]
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#505256",
                      },
                      Object {
                        "fontFamily": "SourceSansPro-Regular",
                      },
                      Array [
                        Object {
                          "backgroundColor": "rgba(0,0,0,0)",
                          "color": "#ffffff",
                          "fontSize": 18,
                          "fontWeight": "500",
                          "letterSpacing": 1.5,
                          "textAlign": "center",
                        },
                        Array [
                          Object {
                            "fontSize": 12,
                            "fontWeight": "normal",
                            "letterSpacing": 1,
                            "lineHeight": 16,
                          },
                          Object {
                            "color": "#B4B6BA",
                          },
                        ],
                      ],
                    ]
                  }
                >
                  Weekly
                </Text>
              </View>
            </View>
            <View
              accessible={true}
              clickable={true}
              isTVSelectable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "opacity": 1,
                }
              }
              testID="ReminderRepeatButtonMonthly"
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "transparent",
                      "borderRadius": 0,
                      "borderWidth": 0,
                      "height": 60,
                      "justifyContent": "center",
                      "margin": 0,
                      "paddingHorizontal": 20,
                      "paddingVertical": 10,
                    },
                    null,
                    Array [
                      Object {
                        "borderRadius": 35,
                        "height": 70,
                        "margin": 8,
                        "paddingHorizontal": 0,
                        "paddingVertical": 0,
                        "width": 70,
                      },
                      Object {
                        "backgroundColor": "#ffffff",
                        "borderColor": "#B4B6BA",
                        "borderWidth": 1,
                      },
                    ],
                    null,
                  ]
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#505256",
                      },
                      Object {
                        "fontFamily": "SourceSansPro-Regular",
                      },
                      Array [
                        Object {
                          "backgroundColor": "rgba(0,0,0,0)",
                          "color": "#ffffff",
                          "fontSize": 18,
                          "fontWeight": "500",
                          "letterSpacing": 1.5,
                          "textAlign": "center",
                        },
                        Array [
                          Object {
                            "fontSize": 12,
                            "fontWeight": "normal",
                            "letterSpacing": 1,
                            "lineHeight": 16,
                          },
                          Object {
                            "color": "#B4B6BA",
                          },
                        ],
                      ],
                    ]
                  }
                >
                  Monthly
                </Text>
              </View>
            </View>
          </View>
          <View
            style={
              Object {
                "alignItems": "center",
                "alignSelf": "stretch",
                "flexDirection": "row",
                "height": 60,
                "paddingHorizontal": 20,
                "position": "absolute",
                "top": 0,
                "width": "100%",
              }
            }
          >
            <View
              accessible={true}
              clickable={true}
              isTVSelectable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "opacity": 1,
                }
              }
              testID="Button"
            >
              <View
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                    },
                    null,
                    Object {},
                    null,
                  ]
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#505256",
                      },
                      Object {
                        "fontFamily": "SourceSansPro-Regular",
                      },
                      Array [
                        Object {
                          "backgroundColor": "rgba(0,0,0,0)",
                          "color": "#ffffff",
                          "fontSize": 18,
                          "fontWeight": "500",
                          "letterSpacing": 1.5,
                          "textAlign": "center",
                        },
                        Array [
                          Object {
                            "color": "#007AFF",
                            "fontSize": 16,
                            "fontWeight": "normal",
                            "letterSpacing": 1,
                          },
                          Object {
                            "textAlign": "left",
                          },
                        ],
                      ],
                    ]
                  }
                >
                  Cancel
                </Text>
              </View>
            </View>
            <Text
              style={
                Array [
                  Object {
                    "color": "#505256",
                  },
                  Object {
                    "fontFamily": "SourceSansPro-Regular",
                  },
                  Object {
                    "flex": 1,
                    "fontSize": 16,
                    "textAlign": "center",
                  },
                ]
              }
            >
              Date
            </Text>
            <View
              accessible={true}
              clickable={true}
              isTVSelectable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "opacity": 1,
                }
              }
              testID="Button"
            >
              <View
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                    },
                    null,
                    Object {},
                    null,
                  ]
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#505256",
                      },
                      Object {
                        "fontFamily": "SourceSansPro-Regular",
                      },
                      Array [
                        Object {
                          "backgroundColor": "rgba(0,0,0,0)",
                          "color": "#ffffff",
                          "fontSize": 18,
                          "fontWeight": "500",
                          "letterSpacing": 1.5,
                          "textAlign": "center",
                        },
                        Array [
                          Object {
                            "color": "#007AFF",
                            "fontSize": 16,
                            "fontWeight": "normal",
                            "letterSpacing": 1,
                          },
                          undefined,
                        ],
                      ],
                    ]
                  }
                >
                  Done
                </Text>
              </View>
            </View>
          </View>
        </View>
      </Modal>
    </View>
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Object {
            "flex": 1,
            "fontSize": 16,
            "lineHeight": 22,
            "padding": 4,
            "paddingRight": 32,
          },
        ]
      }
    >
      title
    </Text>
  </View>
  <View
    accessible={true}
    clickable={true}
    isTVSelectable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
    testID="CompleteStepButton"
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "borderRadius": 0,
            "borderWidth": 0,
            "height": 60,
            "justifyContent": "center",
            "margin": 0,
            "paddingHorizontal": 20,
            "paddingVertical": 10,
          },
          null,
          Object {
            "paddingHorizontal": 4,
            "paddingVertical": 4,
          },
          null,
        ]
      }
    >
      <Image
        source={
          Object {
            "testUri": "../../../assets/images/checkIcon-blue.png",
          }
        }
        style={
          Object {
            "height": 24,
            "width": 24,
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`AcceptedStepItem renders completed correctly 1`] = `
<View
  accessible={true}
  clickable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#ffffff",
      "borderRadius": 8,
      "elevation": 4,
      "flex": 1,
      "flexDirection": "row",
      "marginHorizontal": 16,
      "marginVertical": 4,
      "opacity": 1,
      "padding": 16,
      "shadowColor": "#000000",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 2,
    }
  }
  testID="CompletedCardButton"
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#505256",
          },
          Object {
            "fontFamily": "SourceSansPro-Regular",
          },
          Array [
            Object {
              "flex": 1,
              "fontSize": 16,
              "lineHeight": 22,
              "padding": 4,
              "paddingRight": 32,
            },
            Object {
              "color": "#B4B6BA",
            },
          ],
        ]
      }
    >
      title
    </Text>
  </View>
  <Image
    source={
      Object {
        "testUri": "../../../assets/images/checkIcon-grey.png",
      }
    }
    style={
      Object {
        "height": 24,
        "width": 24,
      }
    }
  />
</View>
`;
